CHANGELOG

0.11.0 (in progress)

* support for USING TIMESTAMP <microseconds from epoch>

0.10.0

* support for execute_on_exception within batches

0.9.2
* fixing create keyspace with network topology strategy
* fixing regression with query expressions

0.9
* adding update method
* adding support for ttls
* adding support for per-query consistency
* adding BigInt column (thanks @Lifto)
* adding support for timezone aware time uuid functions (thanks @dokai)
* only saving collection fields on insert if they've been modified
* adding model method that returns a list of modified columns

0.8.5
* adding support for timeouts

0.8.4
* changing value manager previous value copying to deepcopy

0.8.3
* better logging for operational errors

0.8.2
* fix for connection failover

0.8.1
* fix for models not exactly matching schema

0.8.0
* support for table polymorphism
* var int type

0.7.1
* refactoring query class to make defining custom model instantiation logic easier

0.7.0
* added counter columns
* added support for compaction settings at the model level
* deprecated delete_table in favor of drop_table
* deprecated create_table in favor of sync_table
* added support for custom QuerySets

0.6.0
* added table sync

0.5.2
* adding hex conversion to Bytes column

0.5.1
* improving connection pooling
* fixing bug with clustering order columns not being quoted

0.5
* eagerly loading results into the query result cache, the cql driver does this anyway,
    and pulling them from the cursor was causing some problems with gevented queries,
    this will cause some breaking changes for users calling execute directly

0.4.10
* changing query parameter placeholders from uuid1 to uuid4

0.4.7
* adding support for passing None into query batch methods to clear any batch objects

0.4.6
* fixing the way models are compared

0.4.5
* fixed bug where container columns would not call their child to_python method, this only really affected columns with special to_python logic

0.4.4